--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,60 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "airbnb"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint",
+		"only-warn"
+    ],
+    "rules": {
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
+		"react/jsx-one-expression-per-line": "off",
+		"no-use-before-define": "off",
+		"import/no-unresolved": "off",
+		"import/extensions": "off",
+		"linebreak-style": "off",
+        "no-console": "off",
+        "indent": ["error", "tab"],
+        "no-tabs": "off",
+        "no-plusplus": "off",
+        "no-await-in-loop": "off",
+		"default-case": "off",
+		"no-shadow": "off",
+  		"@typescript-eslint/no-shadow": ["error"],
+		"no-unused-vars": "off",
+  		"@typescript-eslint/no-unused-vars": "error",
+		"require-jsdoc": ["warn", {
+			"require": {
+				"FunctionDeclaration": true,
+				"MethodDefinition": true,
+				"ClassDeclaration": true,
+				"ArrowFunctionExpression": false,
+				"FunctionExpression": false
+			}
+		}],
+		/*"max-lines": ["warn", {
+			"max": 500,
+			"skipBlankLines": true,
+			"skipComments": true
+		}],*/
+		"prefer-destructuring": "off",
+		"no-continue": "off",
+		"react/jsx-indent": ["error", "tab"],
+		"react/jsx-indent-props": ["error", "tab"],
+		"react/destructuring-assignment": "off"
+    }
 }
