--- a/package.json
+++ b/package.json
@@ -9,15 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.6.8",
+    "javascript-time-ago": "^2.3.13",
+    "lz-string": "^1.4.4",
+    "material-ui": "^0.20.2",
+    "material-ui-icons": "^1.0.0-beta.36",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-numeric-input": "^2.2.3",
+    "react-outside-click-handler": "^1.3.0",
+    "serialize-javascript": "^6.0.0"
   },
   "devDependencies": {
+    "@types/lz-string": "^1.3.34",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
-    "eslint": "8.10.0",
+    "@types/react-numeric-input": "^2.2.4",
+    "@types/react-outside-click-handler": "^1.3.1",
+    "@types/serialize-javascript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "4.6.2"
   }
 }
