--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "firebase": "^9.6.8",
     "javascript-time-ago": "^2.3.13",
     "lz-string": "^1.4.4",
-    "material-ui": "^0.20.2",
-    "material-ui-icons": "^1.0.0-beta.36",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
