--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
+    "color": "^4.2.1",
+    "compute-lcm": "^1.1.2",
     "firebase": "^9.6.8",
     "javascript-time-ago": "^2.3.13",
     "lz-string": "^1.4.4",
+    "midifile": "^2.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-files": "^3.0.0-alpha.3",
     "react-numeric-input": "^2.2.3",
     "react-outside-click-handler": "^1.3.0",
-    "serialize-javascript": "^6.0.0"
+    "serialize-javascript": "^6.0.0",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
+    "@types/compute-lcm": "^1.1.0",
     "@types/lz-string": "^1.3.34",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
