--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "javascript-time-ago": "^2.3.13",
     "lz-string": "^1.4.4",
     "midifile": "^2.0.0",
-    "next": "12.1.0",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-files": "^3.0.0-alpha.3",
