--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lz-string": "^1.3.34",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-dom": "^17.0.13",
     "@types/react-numeric-input": "^2.2.4",
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/serialize-javascript": "^5.0.2",
