--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-files": "^3.0.0-alpha.3",
     "react-numeric-input": "^2.2.3",
     "react-outside-click-handler": "^1.3.0",
+    "react-responsive": "^9.0.0-beta.6",
     "serialize-javascript": "^6.0.0",
     "use-interval": "^1.4.0"
   },
