Create image uploader control

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"cSpell.words": [
 		"autoscroll",
 		"firestore",
+		"Gameplay",
 		"millis",
 		"Navlink",
 		"nextjs",
@@ -9,6 +10,7 @@
 		"usermenu",
 		"usermenudropdown",
 		"usermenuitem",
-		"Vercel"
+		"Vercel",
+		"webp"
 	]
 }
