Add level uploading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
 	"cSpell.words": [
 		"autoscroll",
+		"dropzone",
 		"firestore",
 		"Gameplay",
 		"millis",
 		"Navlink",
 		"nextjs",
+		"noninteractive",
 		"NSMBU",
 		"usermenu",
 		"usermenudropdown",
