--- a/firebase.json
+++ b/firebase.json
@@ -19,18 +19,23 @@
   },
   "emulators": {
     "auth": {
+      "host": "192.168.1.190",
       "port": 9099
     },
     "functions": {
+      "host": "192.168.1.190",
       "port": 5001
     },
     "firestore": {
+      "host": "192.168.1.190",
       "port": 8080
     },
     "hosting": {
+      "host": "192.168.1.190",
       "port": 5000
     },
     "storage": {
+      "host": "192.168.1.190",
       "port": 9199
     },
     "ui": {
