--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "typescript-is": "^0.19.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
@@ -28,6 +29,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
+    "ttypescript": "^1.5.13",
     "typescript": "^4.6.2"
   },
   "private": true
