--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,7 +8,10 @@
     "strict": true,
     "target": "es2017",
     "jsx": "react",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "plugins": [
+      { "transform": "typescript-is/lib/transform-inline/transformer" }
+  ]
   },
   "compileOnSave": true,
   "include": [
