--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-responsive": "^9.0.0-beta.6",
     "serialize-javascript": "^6.0.0",
+    "typescript-is": "^0.19.0",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
