--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,15 @@
 .DS_Store
 *.pem
 /.VSCodeCounter/
+/firebase-export*
+/emulator-data
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+firebase-debug.log*
 
 # local env files
 .env.local
