--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
 		"noninteractive",
 		"NSMBU",
 		"Speedrun",
+		"Uploadablity",
+		"userinit",
 		"usermenu",
 		"usermenudropdown",
 		"usermenuitem",
