--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-files": "^3.0.0-alpha.3",
+    "react-image-gallery": "^1.2.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.5",
     "react-numeric-input": "^2.2.3",
@@ -41,6 +42,7 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-numeric-input": "^2.2.4",
     "@types/react-outside-click-handler": "^1.3.1",
