--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compute-lcm": "^1.1.2",
     "cross-env": "^7.0.3",
     "firebase": "^9.6.8",
+    "firebaseui": "^6.0.1",
     "javascript-time-ago": "^2.3.13",
     "lz-string": "^1.4.4",
     "midifile": "^2.0.0",
