--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "midifile": "^2.0.0",
     "next": "^12.1.0",
     "react": "17.0.2",
+    "react-cookie-consent": "^7.3.1",
     "react-dom": "17.0.2",
     "react-files": "^3.0.0-alpha.3",
     "react-image-gallery": "^1.2.7",
