Allow page to load

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,8 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "functions/src/.next/cache/**"
     ],
     "rewrites": [
       {
