--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,29 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tsc": "^2.0.4",
-    "typescript-is": "^0.19.0"
+    "typescript-is": "^0.19.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
+    "@next/bundle-analyzer": "^12.1.0",
+    "color": "^4.2.1",
+    "compute-lcm": "^1.1.2",
+    "cross-env": "^7.0.3",
+    "firebase": "^9.6.8",
+    "firebaseui": "^6.0.1",
+    "javascript-time-ago": "^2.3.13",
+    "lz-string": "^1.4.4",
+    "midifile": "^2.0.0",
+    "react-cookie-consent": "^7.3.1",
+    "react-files": "^3.0.0-alpha.3",
+    "react-image-gallery": "^1.2.7",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.5",
+    "react-numeric-input": "^2.2.3",
+    "react-outside-click-handler": "^1.3.0",
+    "serialize-javascript": "^6.0.0",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
