--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "midifile": "^2.0.0",
     "next": "^12.1.0",
     "react": "17.0.2",
+    "react-avatar-editor": "^12.0.0",
     "react-cookie-consent": "^7.3.1",
     "react-dom": "17.0.2",
     "react-files": "^3.0.0-alpha.3",
@@ -43,6 +44,7 @@
     "@types/lz-string": "^1.3.34",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-avatar-editor": "^12.0.0",
     "@types/react-dom": "^17.0.13",
     "@types/react-image-gallery": "^1.0.5",
     "@types/react-infinite-scroller": "^1.2.2",
