--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-infinite-scroller": "^1.2.5",
     "react-numeric-input": "^2.2.3",
     "react-outside-click-handler": "^1.3.0",
+    "react-overlays": "^5.1.1",
     "serialize-javascript": "^6.0.0",
     "typescript-is": "^0.19.0",
     "use-interval": "^1.4.0"
