Begin adding notifications

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,13 @@
 		"Navlink",
 		"nextjs",
 		"noninteractive",
+		"notif",
+		"notifs",
 		"NSMBU",
 		"PATHFIND",
 		"pathfinding",
 		"Speedrun",
+		"unsub",
 		"Uploadablity",
 		"userinit",
 		"usermenu",
