Name change and reply notifs

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Level Studio",
-  "name": "Music Level Studio",
+  "name": "MakerCentral",
   "icons": [
     {
       "src": "favicon.ico",
