--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@next/bundle-analyzer": "^12.1.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "color": "^4.2.1",
     "compute-lcm": "^1.1.2",
     "cross-env": "^7.0.3",
@@ -41,6 +42,7 @@
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/color": "^3.0.3",
     "@types/compute-lcm": "^1.1.0",
     "@types/lz-string": "^1.3.34",
