Further improve modal display

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
 		"Gameplay",
 		"Leaderboard",
 		"leaderboards",
+		"litish",
+		"Meilisearch",
 		"millis",
 		"Navlink",
 		"nextjs",
@@ -15,6 +17,7 @@
 		"notif",
 		"notifs",
 		"NSMBU",
+		"Overworld",
 		"PATHFIND",
 		"pathfinding",
 		"Speedrun",
