--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@scripts/*": ["src/scripts/*"],
-      "@data/*": ["src/data/*"],
+      "@data/*": ["data/*"],
       "@styles/*": ["styles*"]
     }
   },
