--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "ttsc",
+    "refresh-files": "node ./build.mjs",
+    "build": "node ./build.mjs && ttsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -14,13 +15,6 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "tsc": "^2.0.4",
-    "typescript-is": "^0.19.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
@@ -30,18 +24,26 @@
     "compute-lcm": "^1.1.2",
     "cross-env": "^7.0.3",
     "firebase": "^9.6.8",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
     "firebaseui": "^6.0.1",
     "javascript-time-ago": "^2.3.13",
     "lz-string": "^1.4.4",
     "midifile": "^2.0.0",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
     "react-cookie-consent": "^7.3.1",
+    "react-dom": "^17.0.2",
     "react-files": "^3.0.0-alpha.3",
     "react-image-gallery": "^1.2.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.5",
     "react-numeric-input": "^2.2.3",
     "react-outside-click-handler": "^1.3.0",
+    "recursive-copy": "^2.0.14",
     "serialize-javascript": "^6.0.0",
+    "tsc": "^2.0.4",
+    "typescript-is": "^0.19.0",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
