Separate browser and raw types

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
 		"no-continue": "off",
 		"react/jsx-indent": ["error", "tab"],
 		"react/jsx-indent-props": ["error", "tab"],
-		"react/destructuring-assignment": "off"
+		"react/destructuring-assignment": "off",
+		"camelcase": "off"
     }
 }
