--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.4.4",
     "@next/bundle-analyzer": "^12.1.0",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "chunk": "^0.0.3",
     "color": "^4.2.1",
     "compute-lcm": "^1.1.2",
     "cross-env": "^7.0.3",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/chunk": "^0.0.0",
     "@types/color": "^3.0.3",
     "@types/compute-lcm": "^1.1.0",
     "@types/lz-string": "^1.3.34",
