Create pipeline to index levels

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,9 @@
         "sourceType": "module"
     },
     "plugins": [
+		"only-warn",
         "react",
-        "@typescript-eslint",
-		"only-warn"
+        "@typescript-eslint"
     ],
     "rules": {
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
