--- a/functions/package.json
+++ b/functions/package.json
@@ -45,11 +45,13 @@
     "react-outside-click-handler": "^1.3.0",
     "recursive-copy": "^2.0.14",
     "serialize-javascript": "^6.0.0",
+    "sharp": "^0.30.7",
     "tsc": "^2.0.4",
     "typescript-is": "^0.19.0",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
+    "@types/sharp": "^0.30.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
