--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@next/bundle-analyzer": "^12.1.0",
+    "axios": "^0.27.2",
     "chunk": "^0.0.3",
     "color": "^4.2.1",
     "compute-lcm": "^1.1.2",
