--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@next/bundle-analyzer": "^12.1.0",
+    "axios": "^0.27.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "chunk": "^0.0.3",
     "color": "^4.2.1",
