Prepare content downloader for testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,12 @@
 		"firebaseui",
 		"firestore",
 		"Gameplay",
+		"gamestyle",
 		"Leaderboard",
 		"leaderboards",
 		"litish",
 		"makercentral",
+		"Meili",
 		"Meilisearch",
 		"millis",
 		"Navlink",
@@ -22,6 +24,7 @@
 		"Overworld",
 		"PATHFIND",
 		"pathfinding",
+		"Pids",
 		"Speedrun",
 		"Uids",
 		"unsub",
