--- a/functions/package.json
+++ b/functions/package.json
@@ -35,6 +35,7 @@
     "meilisearch": "^0.25.1",
     "midifile": "^2.0.0",
     "next": "^12.1.0",
+    "node-fetch": "^3.2.6",
     "react": "^17.0.2",
     "react-cookie-consent": "^7.3.1",
     "react-dom": "^17.0.2",
