Add commands to dump and reupload levels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,9 +28,12 @@
 		"PATHFIND",
 		"pathfinding",
 		"Pids",
+		"reuploads",
 		"Speedrun",
+		"subdir",
 		"Uids",
 		"unsub",
+		"updatedb",
 		"Uploadablity",
 		"userinit",
 		"usermenu",
