--- a/cli/package.json
+++ b/cli/package.json
@@ -39,6 +39,7 @@
     "partrick": "^1.0.2",
     "path": "^0.12.7",
     "save-pixels": "^2.3.6",
+    "sharp": "^0.30.7",
     "sitemap": "^7.1.1",
     "sqlite3": "^5.0.8",
     "threads": "^1.7.0",
@@ -60,6 +61,7 @@
     "@types/natural": "^5.1.1",
     "@types/node": "^17.0.23",
     "@types/save-pixels": "^2.3.2",
+    "@types/sharp": "^0.30.4",
     "@types/sqlite3": "^3.1.8",
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
