--- a/cli/package.json
+++ b/cli/package.json
@@ -38,6 +38,7 @@
     "ndarray": "^1.0.19",
     "partrick": "^1.0.2",
     "path": "^0.12.7",
+    "prompts": "^2.4.2",
     "save-pixels": "^2.3.6",
     "sharp": "^0.30.7",
     "sitemap": "^7.1.1",
@@ -60,6 +61,7 @@
     "@types/html-escaper": "^3.0.0",
     "@types/natural": "^5.1.1",
     "@types/node": "^17.0.23",
+    "@types/prompts": "^2.4.4",
     "@types/save-pixels": "^2.3.2",
     "@types/sharp": "^0.30.4",
     "@types/sqlite3": "^3.1.8",
