--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "sync-files": "node ./syncFiles.mjs",
-    "build": "node ./syncFiles.mjs && ttsc",
+    "build": "ttsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -60,6 +60,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
+    "firebase-tools": "^10.7.1",
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.2"
   },
