--- a/package.json
+++ b/package.json
@@ -10,68 +10,69 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.4",
-    "@mui/material": "^5.4.4",
-    "@next/bundle-analyzer": "^12.1.0",
-    "axios": "^0.27.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@next/bundle-analyzer": "^14.0.4",
+    "axios": "^1.6.2",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "chart.js": "^3.8.0",
+    "chart.js": "^4.4.1",
     "chunk": "^0.0.3",
-    "color": "^4.2.1",
+    "color": "^4.2.3",
     "compute-lcm": "^1.1.2",
     "cross-env": "^7.0.3",
-    "eslint-plugin-jsdoc": "^39.3.2",
-    "firebase": "^9.6.8",
-    "firebaseui": "^6.0.1",
-    "javascript-time-ago": "^2.3.13",
-    "lz-string": "^1.4.4",
-    "meilisearch": "^0.30.0",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "firebase": "^10.7.1",
+    "firebaseui": "^6.1.0",
+    "javascript-time-ago": "^2.5.9",
+    "lz-string": "^1.5.0",
+    "meilisearch": "^0.36.0",
     "midifile": "^2.0.0",
-    "next": "^12.1.0",
-    "react": "17.0.2",
-    "react-avatar-editor": "^12.0.0",
-    "react-chartjs-2": "^4.2.0",
-    "react-cookie-consent": "^7.3.1",
-    "react-dom": "17.0.2",
-    "react-files": "^3.0.0-alpha.3",
-    "react-image-gallery": "^1.2.7",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-cookie-consent": "^9.0.0",
+    "react-dom": "^18.2.0",
+    "react-files": "^3.0.0",
+    "react-image-gallery": "^1.3.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-infinite-scroller": "^1.2.5",
+    "react-infinite-scroller": "^1.2.6",
     "react-numeric-input": "^2.2.3",
     "react-outside-click-handler": "^1.3.0",
-    "react-overlays": "^5.1.1",
-    "serialize-javascript": "^6.0.0",
-    "typescript-is": "^0.19.0",
+    "react-overlays": "^5.2.1",
+    "serialize-javascript": "^6.0.1",
     "typescript-parser": "^2.6.1",
+    "typia": "^5.3.4",
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
-    "@types/body-scroll-lock": "^3.1.0",
-    "@types/chunk": "^0.0.0",
-    "@types/color": "^3.0.3",
-    "@types/compute-lcm": "^1.1.0",
-    "@types/lz-string": "^1.3.34",
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "@types/react-avatar-editor": "^12.0.0",
-    "@types/react-dom": "^17.0.13",
-    "@types/react-image-gallery": "^1.0.5",
-    "@types/react-infinite-scroller": "^1.2.2",
-    "@types/react-numeric-input": "^2.2.4",
-    "@types/react-outside-click-handler": "^1.3.1",
-    "@types/serialize-javascript": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^8.16.0",
+    "@types/body-scroll-lock": "^3.1.2",
+    "@types/chunk": "^0.0.2",
+    "@types/color": "^3.0.6",
+    "@types/compute-lcm": "^1.1.3",
+    "@types/lz-string": "^1.5.0",
+    "@types/next": "^9.0.0",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "@types/react-avatar-editor": "^13.0.2",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-image-gallery": "^1.2.4",
+    "@types/react-infinite-scroller": "^1.2.5",
+    "@types/react-numeric-input": "^2.2.7",
+    "@types/react-outside-click-handler": "^1.3.3",
+    "@types/serialize-javascript": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.1.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-only-warn": "^1.0.3",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "4.6.2"
+    "eslint-config-next": "^14.0.4",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^5.3.3"
   }
 }
